--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,6 @@
               "src/assets"  
             ],
             "styles": [
-              "node_modules/angular-archwizard/archwizard.css",
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -85,7 +84,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss",
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
