--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/axios": "^0.14.0",
     "angular-archwizard": "^5.0.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^5.2.0",
