--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@types/axios": "^0.14.0",
+    "@types/file-saver": "^2.0.1",
     "angular-archwizard": "^5.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "file-saver": "^2.0.2",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
