--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/axios": "^0.14.0",
     "@types/file-saver": "^2.0.1",
     "angular-archwizard": "^5.0.0",
+    "angular-bootstrap-md": "^8.7.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
