--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "~7.1.0",
     "@types/axios": "^0.14.0",
     "@types/file-saver": "^2.0.1",
+    "@types/stripe": "7.13.11",
+    "@types/stripe-v3": "^3.1.9",
     "angular-archwizard": "^5.0.0",
     "angular-bootstrap-md": "^8.7.0",
     "axios": "^0.19.0",
