--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
+    "ngx-autosize": "^1.6.4",
     "ngx-bootstrap": "^5.2.0",
     "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
